alignment-fix

--- a/src/index.css
+++ b/src/index.css
@@ -24,9 +24,9 @@
     outline: none;
     
   } */
-@media (min-width: 1024px) { 
+/* @media (min-width: 1024px) { 
   .panel-width {
     width: 1024px;
   }
 
-} 
+}  */
